# EBS

./: CMakeLists.txt  EBSConfig.cmake  LICENSE  README.md  Steganography.h  SteganographyConfig.cmake  embed.c  embed.h  extract.c  extract.h  shared.c  shared.h  steganography.h
examples/: c_example.c  comprehensive.c  cpp_example.cpp  get_started.c
include/EBS/: EBS.h  EBS.hpp
rust/: Cargo.toml  build.rs
rust/examples/: example.rs
rust/src/: lib.rs
src/: embed.c  embed.h  extract.c  extract.h  shared.c  shared.h  steganography.h
tests/: case_loader.c  case_loader.h  comprehensive.c  embed_tests.c  embed_tests.h  extract_tests.c  extract_tests.h  shared_tests.c  shared_tests.h  tests.c
tests/cases/: case_32x32x1  case_32x32x2  case_32x32x3  case_32x32x4
